# mind-shell

./: COMPLETED_WORK.md  PHASE_1_SUMMARY.md  README.md  TODO.md  main.py  mind_shell.toml  pyproject.toml  verify_integration.py
mind_shell/: __init__.py  cli.py
mind_shell/config/: settings.py  template.toml
mind_shell/core/: __init__.py  agent.py  context.py  session.py  tool_executor.py
mind_shell/llm/: client.py
mind_shell/tools/: __init__.py  base_tool.py  file_system.py  git_tool.py  media.py  shell_tool.py  web.py
mind_shell/ui/: chat.py
