
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mind-shell"
version = "0.1.0"
description = "A powerful AI assistant for the terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "typer[all]>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "gitpython>=3.1",
    "pypdf>=6.8.0",
    "pillow>=12.1.1",
    "toml>=0.10",
    "prompt-toolkit>=3",
    "markdownify>=1.2.2",
    "openai>=2.28.0",
    "ollama>=0.6.1",
]

[project.scripts]
mind_shell = "mind_shell.cli:app"
 
[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
openai = ["openai>=1.0"]
ollama = []
 
[tool.ruff]
line-length = 100
target-version = "py311"
 
[tool.hatch.build.targets.wheel]
packages = ["mind_shell"]
